# efficiency-fin-soccer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: config.json
data/sport/players/: top_assists_league_602_season_2025.csv  top_assists_league_624_season_2023.csv  top_assists_league_624_season_2024.csv  top_assists_league_624_season_2025.csv  top_assists_league_629_season_2023.csv  top_assists_league_629_season_2024.csv  top_assists_league_629_season_2025.csv  top_scorers_league_13_season_2023.csv  top_scorers_league_624_season_2023.csv  top_scorers_league_624_season_2024.csv  top_scorers_league_624_season_2025.csv  top_scorers_league_629_season_2023.csv  top_scorers_league_629_season_2024.csv  top_scorers_league_629_season_2025.csv
data/sport/seasons/: available_seasons.json  season_2023_results.csv  season_2024_results.csv  season_2025_results.csv
data/sql/: athena_views.sql  schema.sql
docs/: generate_api_docs.py
src/libs/: __init__.py  api_football.py  api_football_models.py  pipeline.py  storage.py  utils.py
terraform/: CHANGELOG.md  athena.tf  glue.tf  main.tf  network.tf  outputs.tf  rds.tf  s3.tf  terraform.tfvars.example  variables.tf
